docs(SnackBar): Fix z-index issue which was cutting off start aligned SnackBars

--- a/src/docs/docs.css
+++ b/src/docs/docs.css
@@ -173,7 +173,6 @@ ul {
   height: calc(100vh - 56px);
   overflow-y: auto;
   -webkit-overflow-scrolling: touch;
-  z-index: 1;
 }
 
 #main-nav .mdc-drawer__drawer {
